PC-772 fix Get This button wrap

--- a/vufind/themes/msul/less/custom.less
+++ b/vufind/themes/msul/less/custom.less
@@ -740,8 +740,30 @@ table tr {
   }
 }
 
+// Fix checkboxes disapearing on account page
+.result .record-checkbox {
+  display:block;
+  flex: 0;
+  cursor: pointer;
+}
+
+.result .record-number {
+  display: block;
+  flex: 0 2rem;
+  text-align: center;
+}
+
+@media only screen and (max-width : 767px) {
+  .result .checkbox {
+    display:block;
+  }
+}
+
+
+
 .placehold {
-  text-decoration: none;
+  display:inline-block;
+  text-decoration: none !important;
   color:@parakeetgreen;
   border: 2px solid @parakeetgreen;
   -webkit-border-radius: 7rem;
@@ -817,7 +839,8 @@ table tr {
 
 @media only screen and (min-width : 768px) {
   .sidebar.left {
-    border-right:1px solid @medgray;
+    //border-right:1px solid @medgray;
+    border-right: 1px solid #C1C1C1;
   }
   .record .mainbody.right {
     float:left;
@@ -1170,25 +1193,6 @@ body.template-dir-myresearch.template-name-profile {
       background-color: @gray-darker;
       color: white;
    }
-  }
-}
-
-// Fix checkboxes disapearing on account page
-.result .record-checkbox {
-  display:block;
-  flex: 0;
-  cursor: pointer;
-}
-
-.result .record-number {
-  display: block;
-  flex: 0 2rem;
-  text-align: center;
-}
-
-@media only screen and (max-width : 767px) {
-  .result .checkbox {
-    display:block;
   }
 }
 
